--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,8 +6,8 @@ android {
         applicationId "com.nalsil.tensorflowsimapp"
         minSdkVersion 14
         targetSdkVersion 26
-        versionCode 7
-        versionName "1.1.4"
+        versionCode 8
+        versionName "1.1.5"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -19,26 +19,22 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.0.2'
     implementation 'com.android.support:design:27.0.2'
     implementation 'com.android.support:support-v4:27.0.2'
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
     compile 'org.tensorflow:tensorflow-android:1.4.0'
     compile 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
     compile 'org.greenrobot:eventbus:3.1.1'
     compile 'com.afollestad.material-dialogs:core:0.9.6.0'
-
     compile 'com.google.firebase:firebase-core:11.6.2'
     compile 'com.google.firebase:firebase-ads:11.6.2'
     compile 'com.google.firebase:firebase-analytics:11.6.2'
-
-
+    implementation project(':filepicker')
 }
 
 // ADD THIS AT THE BOTTOM
